package domain.action;

import domain.model.GameState;

public class DefuseAction implements CardAction {
    public void execute(GameState gameState) {}
}