package domain.action;

import domain.model.GameState;

public class ShuffleAction implements CardAction {
    public void execute(GameState gameState) {}
}