package domain.action;

import domain.factory.PlayerInteractionHelper;
import domain.model.GameState;

public class ThreeCatAction implements CardAction {
    private PlayerInteractionHelper helper;

    public void execute(GameState gameState) {}
}